gadget_src = [ files([
'accel.c',
'allocate.c',
'allvars.c',
'begrun.c',
'density.c',
'domain.c',
'driftfac.c',
'endrun.c',
'forcetree.c',
'global.c',
'gravtree.c',
'gravtree_forcetest.c',
'hydra.c',
'init.c',
'io.c',
'longrange.c',
'main.c',
'ngb.c',
'peano.c',
'pm_nonperiodic.c',
'pm_periodic.c',
'potential.c',
'predict.c',
'read_ic.c',
'restart.c',
'run.c',
'system.c',
'timestep.c'
])]
